<resources>
    <string name="app_name">My Application</string>
    <string name="Button1">Button1</string>
    <string name="Button2">Button2</string>
    <string name="Button3">Button3</string>
    <string name="Button4">Button4</string>
    <string name="Button5">Button5</string>
    <string name="Button6">Button6</string>
    <string name="Button7">Button7</string>
    <string name="Button8">Button8</string>
    <string name="Button9">Button9</string>
    <string name="Button10">Button10</string>
    <string name="Button11">Button11</string>
    <string name="Button12">Button12</string>
    <string name="Button13">Button13</string>
    <string name="Button14">Button14</string>
    <string name="Button15">Button15</string>

</resources>
